--- a/tp1periodico/css/index.css
+++ b/tp1periodico/css/index.css
@@ -3,12 +3,14 @@ h1{
     background-color: #5C6B82;
     text-align: center;
     font-size: 50px;
+    font-style: italic;
 }
 
 h2{
     color: #2D1A43;
     background-color: #5C6B82;
     text-align: center;
+    font-style: inherit;
 }
 
 h3{
@@ -23,4 +25,21 @@ h4{
 p{
     background-color: #A99BB8;
     color: #334866;
+}
+
+body{
+    background-color: #ADD0AF;
+}
+
+ol{
+    background-color: #A99BB8;
+}
+
+li{
+    color: #2D1A43;
+    font-weight: bolder;
+}
+
+.italica {
+    font-style: italic;
 }
