--- a/tp1periodico/css/index.css
+++ b/tp1periodico/css/index.css
@@ -4,6 +4,8 @@ h1{
     text-align: center;
     font-size: 50px;
     font-style: italic;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 h2{
@@ -16,6 +18,8 @@ h2{
 h3{
     color: #2D1A43;
     background-color: #5C6B82;
+    margin-top: 0px;
+    
 }
 
 h4{
@@ -28,7 +32,7 @@ p{
 }
 
 body{
-    background-color: #ADD0AF;
+    background-color: #f0f6f0;
 }
 
 ol{
@@ -42,4 +46,134 @@ li{
 
 .italica {
     font-style: italic;
+}
+
+.contenedor-titulo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #5C6B82;
+    margin-top: 40px;
+    margin-bottom: 40px;   
+}
+
+.contenedor-titulo img{
+    object-fit: cover;
+    width: auto;
+    height: 58px;
+    margin-left: 40px;
+}
+
+.contenedor-links{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-evenly;
+    margin: 0 300px;
+
+}
+
+li{
+    background-color: #5C6B82;
+    padding: 10px;
+}
+
+.barra-decorativa{
+    background-color: #5C6B82;
+    max-height: 20px;
+    margin-bottom: 50px;
+    width: 1887px;
+}
+
+.color-del-fondo{
+    color: #5C6B82;
+}
+
+.contenedor-del-contenido-y-publicidad{
+    display: flex;
+    flex-direction: row;
+}
+
+.contenedor-del-contenido{
+    width: 1787px;
+    justify-content: center;
+}
+
+.contenedor-de-publicidad{
+    background-color: red;
+    width: 100px;
+
+}
+
+.bloque-adopcion{
+   
+    display: flex;
+    flex-direction:column; 
+    padding: 50px;
+    width: 300px;
+    text-align: center;
+   
+}
+
+.bloque-adopcion img{
+    object-fit: cover;
+    width: 100%;
+    height: 488px;
+    border: solid;
+    border-color:#5C6B82;
+    
+    
+
+}
+
+.contenedor-adopcion{
+    display: flex;   
+    flex-direction: row;
+    justify-content:space-evenly;
+    background-color:#ADD0AF;
+    margin-left: 300px;
+    margin-right: 300px;
+    align-items: center;
+    text-align: center;
+}
+
+
+.bloque-educacion{
+    padding: 50px;
+    text-align: center;
+}
+
+.bloque-educacion img{
+    object-fit:scale-down;
+    width: 500px;
+    height: 290px;
+    margin: 5px;
+    border: #5C6B82 solid;
+}
+
+.img-final{
+    object-fit: cover;
+    height: 50px;
+    margin: 10px;
+    align-items: center;
+}
+
+.contenedor-de-noticia{
+    width: 1787px;
+    display:block;
+    text-align: center;
+    justify-content: center;
+}
+
+.contenedor-de-noticia img{
+    
+   
+}
+
+.link-final{
+    align-items: center;
+    text-transform: uppercase;
+    font-size: larger;
+    
 }
