--- a/tp1periodico/css/index.css
+++ b/tp1periodico/css/index.css
@@ -2,7 +2,7 @@ h1{
     color: #2D1A43;
     background-color: #5C6B82;
     text-align: center;
-    font-size: 50px;
+    font-size: 300%;
     font-style: italic;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -13,26 +13,34 @@ h2{
     background-color: #5C6B82;
     text-align: center;
     font-style: inherit;
+    font-size: 250%;
 }
 
 h3{
     color: #2D1A43;
     background-color: #5C6B82;
     margin-top: 0px;
-    
+    font-size: 200%;
 }
 
 h4{
     color: #2D1A43;
     background-color: #5C6B82;
+    font-size: 150%;
 }
+
 p{
     background-color: #A99BB8;
     color: #334866;
 }
 
+p::first-letter{
+    font-size: 200%;
+}
+
 body{
     background-color: #f0f6f0;
+    
 }
 
 ol{
@@ -71,7 +79,6 @@ li{
     list-style: none;
     justify-content: space-evenly;
     margin: 0 300px;
-
 }
 
 li{
@@ -103,17 +110,14 @@ li{
 .contenedor-de-publicidad{
     background-color: red;
     width: 100px;
-
 }
 
 .bloque-adopcion{
-   
     display: flex;
     flex-direction:column; 
     padding: 50px;
     width: 300px;
     text-align: center;
-   
 }
 
 .bloque-adopcion img{
@@ -121,10 +125,7 @@ li{
     width: 100%;
     height: 488px;
     border: solid;
-    border-color:#5C6B82;
-    
-    
-
+    border-color:#5C6B82;   
 }
 
 .contenedor-adopcion{
@@ -135,7 +136,6 @@ li{
     margin-left: 300px;
     margin-right: 300px;
     align-items: center;
-    text-align: center;
 }
 
 
@@ -166,14 +166,21 @@ li{
     justify-content: center;
 }
 
-.contenedor-de-noticia img{
-    
+.contenedor-de-noticia img{    
    
 }
 
-.link-final{
+.contenedor-final{
+    display: flex;   
+    flex-direction: row;
+    justify-content:space-evenly;
+    background-color:#ADD0AF;
     align-items: center;
-    text-transform: uppercase;
+}
+
+.link-final{
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
     font-size: larger;
-    
 }
