agrego LA LAMPARA! El js, html y css de la lamparita :)

--- a/web1html/CSS/index.css
+++ b/web1html/CSS/index.css
@@ -92,3 +92,9 @@ ol{
     margin: 20px;
     width: 200px;
 }
+
+.para_abajo{
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+}
