--- a/tp1periodico/css/index.css
+++ b/tp1periodico/css/index.css
@@ -178,3 +178,9 @@ li{
     align-items: center; 
     font-size: larger;
 }
+
+.color-div{
+    background-color: #686070 !important;
+    height: 200px;
+    width: 100px;
+}
