termino el piedra papel tijera lagarto Spock!

--- a/piedraPapelTijeraLagartoSpock/css/index.css
+++ b/piedraPapelTijeraLagartoSpock/css/index.css
@@ -49,11 +49,16 @@ body{
 
 .jugar{
     display: flex;
-    justify-content: center;
+    flex-direction:column;
+    align-items: center;    
 }
 
 .jugar button{
     font-size: large;
     margin: 30px;
     padding: 0 90px;
+}
+
+p{
+    font-weight: bolder;
 }
